--- a/Rules
+++ b/Rules
@@ -26,11 +26,25 @@ compile "/terms/*" do
   layout item[:layout] || "terms"
 end
 
+compile "/changes/*/" do
+  filter :erb
+  filter :kramdown, toc_levels: [2]
+  filter :colorize_syntax, colorizers: { javascript: :pygmentsrb }
+
+  layout item[:layout] || "changes"
+end
+
 compile "*" do
   filter :erb
   filter :kramdown, toc_levels: [2]
 
-  layout item[:layout] || "default"
+  unless item[:layout] == false
+    layout item[:layout] || "default"
+  end
+end
+
+route '/feed' do
+  '/changes.atom'
 end
 
 route "/assets/css/*" do
