--- a/Rules
+++ b/Rules
@@ -10,7 +10,7 @@ end
 compile "/static/*" do
 end
 
-compile 'CNAME' do
+compile "CNAME" do
 end
 
 { "/v1/*"      => "api",
@@ -44,8 +44,8 @@ route "/static/*" do
   item.identifier[7..-2]
 end
 
-route '/CNAME/' do
-  '/CNAME'
+route "CNAME" do
+  "/CNAME"
 end
 
 route "*" do
